2006-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* PTPIP.TXT: describes PTP/IP communication basics.
	  

2006-01-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Removed one unnecessary line of code.
	  Use event_check instead of event_wait for now in
	  canon specific delete code.
	  Added Fuji Finepix E900/PictBridge id.

	* library.c: Added Philipps HDD6320 MTP player.

2006-01-01  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Add EOS 350 canon id too, since
	  it apparently reacts to PTP traffic on it too.

	* ptp.c, ptp.h: Adjusted several canon properties to 
	  better names. Added some previously not known ones.
	  "ramsize" is actually "firmwareversion" and so on.

2005-12-30  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Only allow getpartialobject for EXIF
	  JPEG images.

2005-12-29  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c:
	  Added "fast filesystem" startup mode for newer
	  Nikon cameras.

	  For cards with large number of images this patch
	  reduces the time from > 10 seconds down to 1.5 seconds.

	  It however only allows recreation of a limited view
	  of the /DCIM tree.

	  To switch between old (more correct) and new (faster)
	  model, use the "Camera Settings" -> "Fast Filesystem" 
	  config.

	* library.c: Kodak C330 has no 0x0 parentobject entry in
	  non-card mode, so mark it as "autodetect parent".

	* Cleaned up some names of Nikon defines values.

	* ptp-pack.c, ptp.c, ptp.h: Added Eastman Kodak 
	  setserial, getserial and settext commands.
	  You can display "Hello World!" on the TFT ... ;)

2005-12-28  Marcus Meissner  <marcus@jet.franken.de>

	* Fixed signedness warnings by using "unsigned char*"
	  more often.

	  Added ptp_getnumobjects() function.

2005-12-19  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon IXUS 750.
	* Added HP PhotoSmart M23.

2005-12-18  Hubert Figuiere  <hub@figuiere.net>

	* Added Kodak V530.
